--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,29 @@
-version: '3.1'
+version: '3.9'
 
 services:
-  postgres:
-    image: postgres:10
-    container_name: capstone_container
-    ports:
-      - "5432:5432"
+  # backend:
+  #   container_name: backend
+  #   image: backend
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 3000:3000
+  #     - 5555:5555
+  #   environment:
+  #     - DATABASE_URL="postgresql://postgres:123@db:5432/capstone?schema=public"
+  db:
+    container_name: db
+    image: postgres:15
+    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: capstone
-    networks:
-      - newnetwork
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
-      
-
-networks:
-  newnetwork:
+volumes:
+  pgdata: {}
